--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ Pillow = "^9.0.1"
 awscli = "^1.22.75"
 "aws-cdk.aws-s3" = "^1.148.0"
 "aws-cdk.aws-lambda" = "^1.148.0"
+boto3 = "^1.21.20"
 
 [tool.poetry.dev-dependencies]
 black = {version = "^21.12b0", allow-prereleases = true}
