--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,9 +13,8 @@ isort = "^5.10.1"
 wheel = "^0.37.1"
 Pillow = "^9.0.1"
 awscli = "^1.22.75"
-"aws-cdk.aws-s3" = "^1.148.0"
-"aws-cdk.aws-lambda" = "^1.148.0"
 boto3 = "^1.21.20"
+cdk-dynamo-table-view = "^0.2.101"
 
 [tool.poetry.dev-dependencies]
 black = {version = "^21.12b0", allow-prereleases = true}
